# aura

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cspell.json
.github/workflows/: changelog.yml  docs.yml  release.yml  tag.yml
album/: name.aura
album/configs/: ignore.aura  stores.aura
album/info/: annotators.aura  arts.aura  credits.aura  metadata.aura  name.aura  people.aura  studios.aura
album/meta/: genres.aura  moods.aura  name.aura  roles.aura
album/tracks/: name.aura  td8rad0.aura  tfq9ob2.aura  tg3alw7.aura  tgza9gb.aura  ti9gfmh.aura  tjmhsny.aura  tjmt4ja.aura  tlgvyx8.aura  tmx0jit.aura  tpwf21w.aura  tszaxgz.aura
album/variants/: name.aura  namespace.aura
compiler/: Cargo.toml
compiler/src/: directives.rs  error.rs  lib.rs  main.rs
compiler/src/cfg/: ignore.rs  load.rs  metaaccess.rs  metaboolean.rs  mod.rs
compiler/src/cmd/: check.rs  cloud.rs  compile.rs  gen.rs  hold.rs  init.rs  mod.rs  sanitize.rs  stream.rs  take.rs
compiler/src/emit/: atlas.rs  atom.rs  hami.rs  mod.rs
compiler/src/hist/: delta.rs  mod.rs  replay.rs  serial.rs  store.rs
compiler/src/lex/: mod.rs  scan.rs  token.rs
compiler/src/lint/: keys.rs  mod.rs  rules.rs
compiler/src/logs/: colors.rs  formatter.rs  logger.rs  mod.rs
compiler/src/ns/: export.rs  load.rs  mod.rs
compiler/src/parse/: ast.rs  inherit.rs  mod.rs  parse.rs  resolve.rs  time.rs
core/: Cargo.toml
core/src/: access.rs  asset.rs  delta.rs  entity.rs  history.rs  id.rs  interval.rs  lib.rs  node.rs  person.rs  vocab.rs
docs/: book.toml
docs/src/: SUMMARY.md  install.md  introduction.md  roadmap.md
docs/src/compiler/: overview.md  structure.md  topology.md
docs/src/language/: conventions.md  keywords.md  syntax.md
docs/src/project/: history.md  init.md
